re PR java/7950 (jc1 parses files ending in 0x0d incorrectly)

* lex.c (java_read_unicode_collapsing_terminators): Handle case
	where \r appears at EOF.  Fixes PR java/7950.

From-SVN: r57258